Prevent iPhone panning Display correctly on iPhone

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body{margin:0;background-color:#333333;overflow:hidden;
 #templates{display:none;}
 .dialog-overlay, .dialog{position:absolute;top:0;}
 .dialog-overlay{width:100%;height:100%;z-index:1000;background-color:black;opacity:0.8;}
-.dialog{margin-top:5%;z-index:1001;width:100%;color:black;}
+.dialog{margin-top:20%;z-index:1001;width:100%;color:black;}
 .dialog .inner{margin:0 auto;width:80%;padding:20px;background-color:white;border-radius:5px;max-width:400px;}
 .dialog h2{margin:0;}
 .themed-button{}
